# I3T_CPSL_UnitreeGo2_Codebase

./: .gitignore  README.md  frames.gv
src/CPSL_ROS_livox_ros_driver2/: .gitignore  CMakeLists.txt  build.sh  build_CPSL_ROS2_Sensors.sh  build_CPSL_ROS_Sensors.sh
src/CPSL_ROS_livox_ros_driver2/config/: MID360_config.json
src/CPSL_ROS_livox_ros_driver2/launch/: msg_MID360.launch.py
src/cpsl_detection/: package.xml  setup.cfg  setup.py
src/cpsl_detection/cpsl_detection/: yolo_detector.py
src/cpsl_nav/: package.xml  setup.cfg  setup.py
src/cpsl_nav/config/: localization.yaml  localization_dog.yaml  localization_dog_loose_goals.yaml  localization_radar.yaml  localization_test.yaml  mapper_params_localization_dog.yaml  nav2_go2.yaml  nav2_uav.yaml  nav2_ugv.yaml  slam.yaml  slam_athena.yaml  slam_from_previous.yaml  slam_radar.yaml
src/cpsl_nav/cpsl_nav/: robot_slam_map_pose_pub.py
src/cpsl_nav/launch/: localization.launch.py  localization_dog.launch.py  nav2.launch.py  nav2_archived.launch.py  nav2_go2.launch.py  rviz_nav.launch.py  slam.launch.py  slam3d.launch.py  slam_sync.launch.py
src/cpsl_nav/maps/: JulyLabMap.pgm  JulyLabMap.yaml  JuneLabMap.pgm  JuneLabMap.yaml  cpsl.pgm  cpsl.yaml  cpsl_radar.pgm  cpsl_radar.yaml  newlabmap.pgm  newlabmap.yaml  secondtestmap.pgm  (+5 more)
src/cpsl_ros2_sensors_bringup/: package.xml  setup.cfg  setup.py
src/dog_utilities/: package.xml  setup.cfg  setup.py
src/go2_launcher/: package.xml  setup.cfg  setup.py
src/intel_realsense_functions/: package.xml  setup.cfg  setup.py
src/launcher/: package.xml  setup.py
(+23 files in other folders)
